--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -1,4 +1,4 @@
 <section class="intro" id="intro">
             <h1>Artyom<br>Semenov</h1>
-    <p class="subtitle">I tell stories and design things</p>
+    <p class="subtitle">designer • illustrator • storyteller</p>
         </section>
